overlays/dev/frontend-canary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-canary
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/frontend:v0.10.3
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8080
          protocol: TCP

        livenessProbe:
          httpGet:
            path: /_healthz
            port: 8080
            scheme: HTTP
            httpHeaders:
            - name: Cookie
              value: shop_session-id=x-liveness-probe
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /_healthz
            port: 8080
            scheme: HTTP
            httpHeaders:
            - name: Cookie
              value: shop_session-id=x-readiness-probe
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3

        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
