overlays/dev/loadgenerator-deploy.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: null
    spec:
      containers:
      - name: main
