overlays/dev/shipping-deploy.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: null
    spec:
      containers:
      - name: server
