overlays/dev/dr-backend-adservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: adservice-dr
  namespace: dev
spec:
  host: adservice.dev.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 20
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 5
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
