overlays/dev/dr-backend-cartservice.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: cartservice-cb
  namespace: dev
spec:
  host: cartservice.dev.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 50
        maxRequestsPerConnection: 20
