overlays/dev/dr-backend-checkoutservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: checkoutservice-dr
  namespace: dev
spec:
  host: checkoutservice.dev.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 40
      http:
        http1MaxPendingRequests: 40
        maxRequestsPerConnection: 5
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
