overlays/dev/dr-backend-productcatalogservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name:  productcatalogservice-dr
  namespace: dev
spec:
  host: productcatalogservice.dev.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50
      http:
        http1MaxPendingRequests: 50
        maxRequestsPerConnection: 5
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
