overlays/dev/frontend-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: stable
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
