overlays/dev/frontend-resilience-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-resilience
  namespace: dev
spec:
  hosts:
  - frontend
  gateways:
  - boutique-gateway
  http:
  - route:
    - destination:
        host: frontend
    timeout: 1s
    retries:
      attempts: 0   # 🔥 force fail
