overlays/dev/frontend-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend
  namespace: dev
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - "*"
  http:
  - retries:
      attempts: 2
      perTryTimeout: 1s
      retryOn: 5xx,connect-failure,refused-stream
    timeout: 3s
    route:
    - destination:
        host: frontend.dev.svc.cluster.local
        port:
          number: 80
