overlays/dev/kubectl apply -f cartservice-cb.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cartservice-cb
  namespace: dev
spec:
  host: cartservice
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 5s
      baseEjectionTime: 1m
      maxEjectionPercent: 100
